# esxi-analyzer

./: .gitignore  .pre-commit-config.yaml  README.md  config.yaml  esxi_analyzer.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  release.yml
lib/: __init__.py  analyzer.py  collector.py  config.py  logger.py  report.py  web_interface.py
tests/: __init__.py  test_analyzer.py  test_config.py
